fix text wrapping

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,7 @@ header nav a {
   text-decoration: none;
   color: #4d4d4d;
   padding: 5px 20px;
+  white-space: nowrap;
 }
 
 header nav a:hover {
@@ -40,4 +41,12 @@ nav {
 
 .site-logo:hover {
   text-decoration: none;
+}
+
+.logout-button {
+  margin-left: 2rem;
+  padding: 5px 20px;
+  border-radius: 0.75rem;
+  border: 1px solid #f9a8d4;
+  cursor: pointer;
 }
